// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/InputWithIncrements Base 1`] = `
<InputWithIncrement
  incrementMax={10}
  incrementMed={5}
  incrementMin={1}
  onChange={[Function]}
>
  <WithStyles(InputWithIncrementsComp)
    incrementMax={10}
    incrementMed={5}
    incrementMin={1}
    innerRef={null}
    jssContext={
      Object {
        "classNamePrefix": "",
        "disableStylesGeneration": false,
      }
    }
    onChange={[Function]}
    theme={Object {}}
  >
    <InputWithIncrementsComp
      classes={
        Object {
          "button": "InputWithIncrementsComp-button-0-3-161",
          "buttons": "InputWithIncrementsComp-buttons-0-3-160",
          "input": "InputWithIncrementsComp-input-0-3-162",
          "inputs": "InputWithIncrementsComp-inputs-0-3-159",
          "root": "InputWithIncrementsComp-root-0-3-158",
        }
      }
      incrementMax={10}
      incrementMed={5}
      incrementMin={1}
      onChange={[Function]}
    >
      <div
        className="InputWithIncrementsComp-root-0-3-158"
      >
        <div
          className="InputWithIncrementsComp-inputs-0-3-159"
        >
          <div>
            <Input
              blurOnEnter={true}
              className="InputWithIncrementsComp-input-0-3-162"
              error={false}
              fullWidth={true}
              onBlur={[Function]}
              onChange={[Function]}
              type="number"
              value=""
            >
              <WithStyles(InputComp)
                blurOnEnter={true}
                className="InputWithIncrementsComp-input-0-3-162"
                error={false}
                fullWidth={true}
                innerRef={null}
                jssContext={
                  Object {
                    "classNamePrefix": "",
                    "disableStylesGeneration": false,
                  }
                }
                onBlur={[Function]}
                onChange={[Function]}
                theme={Object {}}
                type="number"
                value=""
              >
                <InputComp
                  blurOnEnter={true}
                  className="InputWithIncrementsComp-input-0-3-162"
                  classes={
                    Object {
                      "error": "InputComp-error-0-3-107",
                      "fullWidth": "InputComp-fullWidth-0-3-108",
                      "root": "InputComp-root-0-3-106",
                    }
                  }
                  error={false}
                  fullWidth={true}
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="number"
                  value=""
                >
                  <input
                    className="InputWithIncrementsComp-input-0-3-162 InputComp-fullWidth-0-3-108 InputComp-root-0-3-106"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    type="number"
                    value=""
                  />
                </InputComp>
              </WithStyles(InputComp)>
            </Input>
          </div>
          <div>
            <Input
              className="InputWithIncrementsComp-input-0-3-162"
              fullWidth={true}
              readOnly={true}
              type="text"
              value=""
            >
              <WithStyles(InputComp)
                className="InputWithIncrementsComp-input-0-3-162"
                fullWidth={true}
                innerRef={null}
                jssContext={
                  Object {
                    "classNamePrefix": "",
                    "disableStylesGeneration": false,
                  }
                }
                readOnly={true}
                theme={Object {}}
                type="text"
                value=""
              >
                <InputComp
                  className="InputWithIncrementsComp-input-0-3-162"
                  classes={
                    Object {
                      "error": "InputComp-error-0-3-107",
                      "fullWidth": "InputComp-fullWidth-0-3-108",
                      "root": "InputComp-root-0-3-106",
                    }
                  }
                  fullWidth={true}
                  readOnly={true}
                  type="text"
                  value=""
                >
                  <input
                    className="InputWithIncrementsComp-input-0-3-162 InputComp-fullWidth-0-3-108 InputComp-root-0-3-106"
                    readOnly={true}
                    type="text"
                    value=""
                  />
                </InputComp>
              </WithStyles(InputComp)>
            </Input>
          </div>
        </div>
        <div
          className="InputWithIncrementsComp-buttons-0-3-160"
        >
          <ButtonCircular
            className="InputWithIncrementsComp-button-0-3-161"
            color="neutral"
            onSelect={[Function]}
            value="+1"
          >
            <WithStyles(ButtonCircularComp)
              className="InputWithIncrementsComp-button-0-3-161"
              color="neutral"
              innerRef={null}
              jssContext={
                Object {
                  "classNamePrefix": "",
                  "disableStylesGeneration": false,
                }
              }
              onSelect={[Function]}
              theme={Object {}}
              value="+1"
            >
              <ButtonCircularComp
                className="InputWithIncrementsComp-button-0-3-161"
                classes={
                  Object {
                    "button": "ButtonCircularComp-button-0-3-53",
                    "neutral": "ButtonCircularComp-neutral-0-3-51",
                    "primary": "ButtonCircularComp-primary-0-3-52",
                  }
                }
                color="neutral"
                onSelect={[Function]}
                value="+1"
              >
                <div
                  className="InputWithIncrementsComp-button-0-3-161 ButtonCircularComp-neutral-0-3-51"
                  onClick={[Function]}
                >
                  <TouchRipple
                    className="ButtonCircularComp-button-0-3-53"
                  >
                    <WithStyles(TouchRippleComp)
                      className="ButtonCircularComp-button-0-3-53"
                      innerRef={null}
                      jssContext={
                        Object {
                          "classNamePrefix": "",
                          "disableStylesGeneration": false,
                        }
                      }
                      theme={Object {}}
                    >
                      <TouchRippleComp
                        className="ButtonCircularComp-button-0-3-53"
                        classes={
                          Object {
                            "disabled": "TouchRippleComp-disabled-0-3-34",
                            "root": "TouchRippleComp-root-0-3-33",
                          }
                        }
                      >
                        <div
                          className="ButtonCircularComp-button-0-3-53 TouchRippleComp-root-0-3-33"
                        >
                          <Typography
                            bold={true}
                            variant="big"
                          >
                            <WithStyles(TypographyComp)
                              bold={true}
                              innerRef={null}
                              jssContext={
                                Object {
                                  "classNamePrefix": "",
                                  "disableStylesGeneration": false,
                                }
                              }
                              theme={Object {}}
                              variant="big"
                            >
                              <TypographyComp
                                bold={true}
                                classes={
                                  Object {
                                    "big": "TypographyComp-big-0-3-7",
                                    "bold": "TypographyComp-bold-0-3-1",
                                    "capitalize": "TypographyComp-capitalize-0-3-12",
                                    "distance": "TypographyComp-distance-0-3-6",
                                    "ellipsis": "TypographyComp-ellipsis-0-3-14",
                                    "giant": "TypographyComp-giant-0-3-9",
                                    "heading": "TypographyComp-heading-0-3-8",
                                    "italic": "TypographyComp-italic-0-3-3",
                                    "lowercase": "TypographyComp-lowercase-0-3-11",
                                    "noWrap": "TypographyComp-noWrap-0-3-13",
                                    "semiBold": "TypographyComp-semiBold-0-3-2",
                                    "standard": "TypographyComp-standard-0-3-5",
                                    "subtext": "TypographyComp-subtext-0-3-4",
                                    "uppercase": "TypographyComp-uppercase-0-3-10",
                                  }
                                }
                                variant="big"
                              >
                                <span
                                  className="TypographyComp-big-0-3-7 TypographyComp-bold-0-3-1"
                                >
                                  +1
                                </span>
                              </TypographyComp>
                            </WithStyles(TypographyComp)>
                          </Typography>
                        </div>
                      </TouchRippleComp>
                    </WithStyles(TouchRippleComp)>
                  </TouchRipple>
                </div>
              </ButtonCircularComp>
            </WithStyles(ButtonCircularComp)>
          </ButtonCircular>
          <ButtonCircular
            className="InputWithIncrementsComp-button-0-3-161"
            color="neutral"
            onSelect={[Function]}
            value="+5"
          >
            <WithStyles(ButtonCircularComp)
              className="InputWithIncrementsComp-button-0-3-161"
              color="neutral"
              innerRef={null}
              jssContext={
                Object {
                  "classNamePrefix": "",
                  "disableStylesGeneration": false,
                }
              }
              onSelect={[Function]}
              theme={Object {}}
              value="+5"
            >
              <ButtonCircularComp
                className="InputWithIncrementsComp-button-0-3-161"
                classes={
                  Object {
                    "button": "ButtonCircularComp-button-0-3-53",
                    "neutral": "ButtonCircularComp-neutral-0-3-51",
                    "primary": "ButtonCircularComp-primary-0-3-52",
                  }
                }
                color="neutral"
                onSelect={[Function]}
                value="+5"
              >
                <div
                  className="InputWithIncrementsComp-button-0-3-161 ButtonCircularComp-neutral-0-3-51"
                  onClick={[Function]}
                >
                  <TouchRipple
                    className="ButtonCircularComp-button-0-3-53"
                  >
                    <WithStyles(TouchRippleComp)
                      className="ButtonCircularComp-button-0-3-53"
                      innerRef={null}
                      jssContext={
                        Object {
                          "classNamePrefix": "",
                          "disableStylesGeneration": false,
                        }
                      }
                      theme={Object {}}
                    >
                      <TouchRippleComp
                        className="ButtonCircularComp-button-0-3-53"
                        classes={
                          Object {
                            "disabled": "TouchRippleComp-disabled-0-3-34",
                            "root": "TouchRippleComp-root-0-3-33",
                          }
                        }
                      >
                        <div
                          className="ButtonCircularComp-button-0-3-53 TouchRippleComp-root-0-3-33"
                        >
                          <Typography
                            bold={true}
                            variant="big"
                          >
                            <WithStyles(TypographyComp)
                              bold={true}
                              innerRef={null}
                              jssContext={
                                Object {
                                  "classNamePrefix": "",
                                  "disableStylesGeneration": false,
                                }
                              }
                              theme={Object {}}
                              variant="big"
                            >
                              <TypographyComp
                                bold={true}
                                classes={
                                  Object {
                                    "big": "TypographyComp-big-0-3-7",
                                    "bold": "TypographyComp-bold-0-3-1",
                                    "capitalize": "TypographyComp-capitalize-0-3-12",
                                    "distance": "TypographyComp-distance-0-3-6",
                                    "ellipsis": "TypographyComp-ellipsis-0-3-14",
                                    "giant": "TypographyComp-giant-0-3-9",
                                    "heading": "TypographyComp-heading-0-3-8",
                                    "italic": "TypographyComp-italic-0-3-3",
                                    "lowercase": "TypographyComp-lowercase-0-3-11",
                                    "noWrap": "TypographyComp-noWrap-0-3-13",
                                    "semiBold": "TypographyComp-semiBold-0-3-2",
                                    "standard": "TypographyComp-standard-0-3-5",
                                    "subtext": "TypographyComp-subtext-0-3-4",
                                    "uppercase": "TypographyComp-uppercase-0-3-10",
                                  }
                                }
                                variant="big"
                              >
                                <span
                                  className="TypographyComp-big-0-3-7 TypographyComp-bold-0-3-1"
                                >
                                  +5
                                </span>
                              </TypographyComp>
                            </WithStyles(TypographyComp)>
                          </Typography>
                        </div>
                      </TouchRippleComp>
                    </WithStyles(TouchRippleComp)>
                  </TouchRipple>
                </div>
              </ButtonCircularComp>
            </WithStyles(ButtonCircularComp)>
          </ButtonCircular>
          <ButtonCircular
            className="InputWithIncrementsComp-button-0-3-161"
            color="neutral"
            onSelect={[Function]}
            value="+10"
          >
            <WithStyles(ButtonCircularComp)
              className="InputWithIncrementsComp-button-0-3-161"
              color="neutral"
              innerRef={null}
              jssContext={
                Object {
                  "classNamePrefix": "",
                  "disableStylesGeneration": false,
                }
              }
              onSelect={[Function]}
              theme={Object {}}
              value="+10"
            >
              <ButtonCircularComp
                className="InputWithIncrementsComp-button-0-3-161"
                classes={
                  Object {
                    "button": "ButtonCircularComp-button-0-3-53",
                    "neutral": "ButtonCircularComp-neutral-0-3-51",
                    "primary": "ButtonCircularComp-primary-0-3-52",
                  }
                }
                color="neutral"
                onSelect={[Function]}
                value="+10"
              >
                <div
                  className="InputWithIncrementsComp-button-0-3-161 ButtonCircularComp-neutral-0-3-51"
                  onClick={[Function]}
                >
                  <TouchRipple
                    className="ButtonCircularComp-button-0-3-53"
                  >
                    <WithStyles(TouchRippleComp)
                      className="ButtonCircularComp-button-0-3-53"
                      innerRef={null}
                      jssContext={
                        Object {
                          "classNamePrefix": "",
                          "disableStylesGeneration": false,
                        }
                      }
                      theme={Object {}}
                    >
                      <TouchRippleComp
                        className="ButtonCircularComp-button-0-3-53"
                        classes={
                          Object {
                            "disabled": "TouchRippleComp-disabled-0-3-34",
                            "root": "TouchRippleComp-root-0-3-33",
                          }
                        }
                      >
                        <div
                          className="ButtonCircularComp-button-0-3-53 TouchRippleComp-root-0-3-33"
                        >
                          <Typography
                            bold={true}
                            variant="big"
                          >
                            <WithStyles(TypographyComp)
                              bold={true}
                              innerRef={null}
                              jssContext={
                                Object {
                                  "classNamePrefix": "",
                                  "disableStylesGeneration": false,
                                }
                              }
                              theme={Object {}}
                              variant="big"
                            >
                              <TypographyComp
                                bold={true}
                                classes={
                                  Object {
                                    "big": "TypographyComp-big-0-3-7",
                                    "bold": "TypographyComp-bold-0-3-1",
                                    "capitalize": "TypographyComp-capitalize-0-3-12",
                                    "distance": "TypographyComp-distance-0-3-6",
                                    "ellipsis": "TypographyComp-ellipsis-0-3-14",
                                    "giant": "TypographyComp-giant-0-3-9",
                                    "heading": "TypographyComp-heading-0-3-8",
                                    "italic": "TypographyComp-italic-0-3-3",
                                    "lowercase": "TypographyComp-lowercase-0-3-11",
                                    "noWrap": "TypographyComp-noWrap-0-3-13",
                                    "semiBold": "TypographyComp-semiBold-0-3-2",
                                    "standard": "TypographyComp-standard-0-3-5",
                                    "subtext": "TypographyComp-subtext-0-3-4",
                                    "uppercase": "TypographyComp-uppercase-0-3-10",
                                  }
                                }
                                variant="big"
                              >
                                <span
                                  className="TypographyComp-big-0-3-7 TypographyComp-bold-0-3-1"
                                >
                                  +10
                                </span>
                              </TypographyComp>
                            </WithStyles(TypographyComp)>
                          </Typography>
                        </div>
                      </TouchRippleComp>
                    </WithStyles(TouchRippleComp)>
                  </TouchRipple>
                </div>
              </ButtonCircularComp>
            </WithStyles(ButtonCircularComp)>
          </ButtonCircular>
        </div>
      </div>
    </InputWithIncrementsComp>
  </WithStyles(InputWithIncrementsComp)>
</InputWithIncrement>
`;

exports[`Storyshots Components/InputWithIncrements Calculation delay 1`] = `
<InputWithIncrement
  calculationDelay={4000}
  incrementMax={100}
  incrementMed={10}
  incrementMin={1}
  onChange={[Function]}
>
  <WithStyles(InputWithIncrementsComp)
    calculationDelay={4000}
    incrementMax={100}
    incrementMed={10}
    incrementMin={1}
    innerRef={null}
    jssContext={
      Object {
        "classNamePrefix": "",
        "disableStylesGeneration": false,
      }
    }
    onChange={[Function]}
    theme={Object {}}
  >
    <InputWithIncrementsComp
      calculationDelay={4000}
      classes={
        Object {
          "button": "InputWithIncrementsComp-button-0-3-161",
          "buttons": "InputWithIncrementsComp-buttons-0-3-160",
          "input": "InputWithIncrementsComp-input-0-3-162",
          "inputs": "InputWithIncrementsComp-inputs-0-3-159",
          "root": "InputWithIncrementsComp-root-0-3-158",
        }
      }
      incrementMax={100}
      incrementMed={10}
      incrementMin={1}
      onChange={[Function]}
    >
      <div
        className="InputWithIncrementsComp-root-0-3-158"
      >
        <div
          className="InputWithIncrementsComp-inputs-0-3-159"
        >
          <div>
            <Input
              blurOnEnter={true}
              className="InputWithIncrementsComp-input-0-3-162"
              error={false}
              fullWidth={true}
              onBlur={[Function]}
              onChange={[Function]}
              type="number"
              value=""
            >
              <WithStyles(InputComp)
                blurOnEnter={true}
                className="InputWithIncrementsComp-input-0-3-162"
                error={false}
                fullWidth={true}
                innerRef={null}
                jssContext={
                  Object {
                    "classNamePrefix": "",
                    "disableStylesGeneration": false,
                  }
                }
                onBlur={[Function]}
                onChange={[Function]}
                theme={Object {}}
                type="number"
                value=""
              >
                <InputComp
                  blurOnEnter={true}
                  className="InputWithIncrementsComp-input-0-3-162"
                  classes={
                    Object {
                      "error": "InputComp-error-0-3-107",
                      "fullWidth": "InputComp-fullWidth-0-3-108",
                      "root": "InputComp-root-0-3-106",
                    }
                  }
                  error={false}
                  fullWidth={true}
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="number"
                  value=""
                >
                  <input
                    className="InputWithIncrementsComp-input-0-3-162 InputComp-fullWidth-0-3-108 InputComp-root-0-3-106"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    type="number"
                    value=""
                  />
                </InputComp>
              </WithStyles(InputComp)>
            </Input>
          </div>
          <div>
            <Input
              className="InputWithIncrementsComp-input-0-3-162"
              fullWidth={true}
              readOnly={true}
              type="text"
              value=""
            >
              <WithStyles(InputComp)
                className="InputWithIncrementsComp-input-0-3-162"
                fullWidth={true}
                innerRef={null}
                jssContext={
                  Object {
                    "classNamePrefix": "",
                    "disableStylesGeneration": false,
                  }
                }
                readOnly={true}
                theme={Object {}}
                type="text"
                value=""
              >
                <InputComp
                  className="InputWithIncrementsComp-input-0-3-162"
                  classes={
                    Object {
                      "error": "InputComp-error-0-3-107",
                      "fullWidth": "InputComp-fullWidth-0-3-108",
                      "root": "InputComp-root-0-3-106",
                    }
                  }
                  fullWidth={true}
                  readOnly={true}
                  type="text"
                  value=""
                >
                  <input
                    className="InputWithIncrementsComp-input-0-3-162 InputComp-fullWidth-0-3-108 InputComp-root-0-3-106"
                    readOnly={true}
                    type="text"
                    value=""
                  />
                </InputComp>
              </WithStyles(InputComp)>
            </Input>
          </div>
        </div>
        <div
          className="InputWithIncrementsComp-buttons-0-3-160"
        >
          <ButtonCircular
            className="InputWithIncrementsComp-button-0-3-161"
            color="neutral"
            onSelect={[Function]}
            value="+1"
          >
            <WithStyles(ButtonCircularComp)
              className="InputWithIncrementsComp-button-0-3-161"
              color="neutral"
              innerRef={null}
              jssContext={
                Object {
                  "classNamePrefix": "",
                  "disableStylesGeneration": false,
                }
              }
              onSelect={[Function]}
              theme={Object {}}
              value="+1"
            >
              <ButtonCircularComp
                className="InputWithIncrementsComp-button-0-3-161"
                classes={
                  Object {
                    "button": "ButtonCircularComp-button-0-3-53",
                    "neutral": "ButtonCircularComp-neutral-0-3-51",
                    "primary": "ButtonCircularComp-primary-0-3-52",
                  }
                }
                color="neutral"
                onSelect={[Function]}
                value="+1"
              >
                <div
                  className="InputWithIncrementsComp-button-0-3-161 ButtonCircularComp-neutral-0-3-51"
                  onClick={[Function]}
                >
                  <TouchRipple
                    className="ButtonCircularComp-button-0-3-53"
                  >
                    <WithStyles(TouchRippleComp)
                      className="ButtonCircularComp-button-0-3-53"
                      innerRef={null}
                      jssContext={
                        Object {
                          "classNamePrefix": "",
                          "disableStylesGeneration": false,
                        }
                      }
                      theme={Object {}}
                    >
                      <TouchRippleComp
                        className="ButtonCircularComp-button-0-3-53"
                        classes={
                          Object {
                            "disabled": "TouchRippleComp-disabled-0-3-34",
                            "root": "TouchRippleComp-root-0-3-33",
                          }
                        }
                      >
                        <div
                          className="ButtonCircularComp-button-0-3-53 TouchRippleComp-root-0-3-33"
                        >
                          <Typography
                            bold={true}
                            variant="big"
                          >
                            <WithStyles(TypographyComp)
                              bold={true}
                              innerRef={null}
                              jssContext={
                                Object {
                                  "classNamePrefix": "",
                                  "disableStylesGeneration": false,
                                }
                              }
                              theme={Object {}}
                              variant="big"
                            >
                              <TypographyComp
                                bold={true}
                                classes={
                                  Object {
                                    "big": "TypographyComp-big-0-3-7",
                                    "bold": "TypographyComp-bold-0-3-1",
                                    "capitalize": "TypographyComp-capitalize-0-3-12",
                                    "distance": "TypographyComp-distance-0-3-6",
                                    "ellipsis": "TypographyComp-ellipsis-0-3-14",
                                    "giant": "TypographyComp-giant-0-3-9",
                                    "heading": "TypographyComp-heading-0-3-8",
                                    "italic": "TypographyComp-italic-0-3-3",
                                    "lowercase": "TypographyComp-lowercase-0-3-11",
                                    "noWrap": "TypographyComp-noWrap-0-3-13",
                                    "semiBold": "TypographyComp-semiBold-0-3-2",
                                    "standard": "TypographyComp-standard-0-3-5",
                                    "subtext": "TypographyComp-subtext-0-3-4",
                                    "uppercase": "TypographyComp-uppercase-0-3-10",
                                  }
                                }
                                variant="big"
                              >
                                <span
                                  className="TypographyComp-big-0-3-7 TypographyComp-bold-0-3-1"
                                >
                                  +1
                                </span>
                              </TypographyComp>
                            </WithStyles(TypographyComp)>
                          </Typography>
                        </div>
                      </TouchRippleComp>
                    </WithStyles(TouchRippleComp)>
                  </TouchRipple>
                </div>
              </ButtonCircularComp>
            </WithStyles(ButtonCircularComp)>
          </ButtonCircular>
          <ButtonCircular
            className="InputWithIncrementsComp-button-0-3-161"
            color="neutral"
            onSelect={[Function]}
            value="+10"
          >
            <WithStyles(ButtonCircularComp)
              className="InputWithIncrementsComp-button-0-3-161"
              color="neutral"
              innerRef={null}
              jssContext={
                Object {
                  "classNamePrefix": "",
                  "disableStylesGeneration": false,
                }
              }
              onSelect={[Function]}
              theme={Object {}}
              value="+10"
            >
              <ButtonCircularComp
                className="InputWithIncrementsComp-button-0-3-161"
                classes={
                  Object {
                    "button": "ButtonCircularComp-button-0-3-53",
                    "neutral": "ButtonCircularComp-neutral-0-3-51",
                    "primary": "ButtonCircularComp-primary-0-3-52",
                  }
                }
                color="neutral"
                onSelect={[Function]}
                value="+10"
              >
                <div
                  className="InputWithIncrementsComp-button-0-3-161 ButtonCircularComp-neutral-0-3-51"
                  onClick={[Function]}
                >
                  <TouchRipple
                    className="ButtonCircularComp-button-0-3-53"
                  >
                    <WithStyles(TouchRippleComp)
                      className="ButtonCircularComp-button-0-3-53"
                      innerRef={null}
                      jssContext={
                        Object {
                          "classNamePrefix": "",
                          "disableStylesGeneration": false,
                        }
                      }
                      theme={Object {}}
                    >
                      <TouchRippleComp
                        className="ButtonCircularComp-button-0-3-53"
                        classes={
                          Object {
                            "disabled": "TouchRippleComp-disabled-0-3-34",
                            "root": "TouchRippleComp-root-0-3-33",
                          }
                        }
                      >
                        <div
                          className="ButtonCircularComp-button-0-3-53 TouchRippleComp-root-0-3-33"
                        >
                          <Typography
                            bold={true}
                            variant="big"
                          >
                            <WithStyles(TypographyComp)
                              bold={true}
                              innerRef={null}
                              jssContext={
                                Object {
                                  "classNamePrefix": "",
                                  "disableStylesGeneration": false,
                                }
                              }
                              theme={Object {}}
                              variant="big"
                            >
                              <TypographyComp
                                bold={true}
                                classes={
                                  Object {
                                    "big": "TypographyComp-big-0-3-7",
                                    "bold": "TypographyComp-bold-0-3-1",
                                    "capitalize": "TypographyComp-capitalize-0-3-12",
                                    "distance": "TypographyComp-distance-0-3-6",
                                    "ellipsis": "TypographyComp-ellipsis-0-3-14",
                                    "giant": "TypographyComp-giant-0-3-9",
                                    "heading": "TypographyComp-heading-0-3-8",
                                    "italic": "TypographyComp-italic-0-3-3",
                                    "lowercase": "TypographyComp-lowercase-0-3-11",
                                    "noWrap": "TypographyComp-noWrap-0-3-13",
                                    "semiBold": "TypographyComp-semiBold-0-3-2",
                                    "standard": "TypographyComp-standard-0-3-5",
                                    "subtext": "TypographyComp-subtext-0-3-4",
                                    "uppercase": "TypographyComp-uppercase-0-3-10",
                                  }
                                }
                                variant="big"
                              >
                                <span
                                  className="TypographyComp-big-0-3-7 TypographyComp-bold-0-3-1"
                                >
                                  +10
                                </span>
                              </TypographyComp>
                            </WithStyles(TypographyComp)>
                          </Typography>
                        </div>
                      </TouchRippleComp>
                    </WithStyles(TouchRippleComp)>
                  </TouchRipple>
                </div>
              </ButtonCircularComp>
            </WithStyles(ButtonCircularComp)>
          </ButtonCircular>
          <ButtonCircular
            className="InputWithIncrementsComp-button-0-3-161"
            color="neutral"
            onSelect={[Function]}
            value="+100"
          >
            <WithStyles(ButtonCircularComp)
              className="InputWithIncrementsComp-button-0-3-161"
              color="neutral"
              innerRef={null}
              jssContext={
                Object {
                  "classNamePrefix": "",
                  "disableStylesGeneration": false,
                }
              }
              onSelect={[Function]}
              theme={Object {}}
              value="+100"
            >
              <ButtonCircularComp
                className="InputWithIncrementsComp-button-0-3-161"
                classes={
                  Object {
                    "button": "ButtonCircularComp-button-0-3-53",
                    "neutral": "ButtonCircularComp-neutral-0-3-51",
                    "primary": "ButtonCircularComp-primary-0-3-52",
                  }
                }
                color="neutral"
                onSelect={[Function]}
                value="+100"
              >
                <div
                  className="InputWithIncrementsComp-button-0-3-161 ButtonCircularComp-neutral-0-3-51"
                  onClick={[Function]}
                >
                  <TouchRipple
                    className="ButtonCircularComp-button-0-3-53"
                  >
                    <WithStyles(TouchRippleComp)
                      className="ButtonCircularComp-button-0-3-53"
                      innerRef={null}
                      jssContext={
                        Object {
                          "classNamePrefix": "",
                          "disableStylesGeneration": false,
                        }
                      }
                      theme={Object {}}
                    >
                      <TouchRippleComp
                        className="ButtonCircularComp-button-0-3-53"
                        classes={
                          Object {
                            "disabled": "TouchRippleComp-disabled-0-3-34",
                            "root": "TouchRippleComp-root-0-3-33",
                          }
                        }
                      >
                        <div
                          className="ButtonCircularComp-button-0-3-53 TouchRippleComp-root-0-3-33"
                        >
                          <Typography
                            bold={true}
                            variant="big"
                          >
                            <WithStyles(TypographyComp)
                              bold={true}
                              innerRef={null}
                              jssContext={
                                Object {
                                  "classNamePrefix": "",
                                  "disableStylesGeneration": false,
                                }
                              }
                              theme={Object {}}
                              variant="big"
                            >
                              <TypographyComp
                                bold={true}
                                classes={
                                  Object {
                                    "big": "TypographyComp-big-0-3-7",
                                    "bold": "TypographyComp-bold-0-3-1",
                                    "capitalize": "TypographyComp-capitalize-0-3-12",
                                    "distance": "TypographyComp-distance-0-3-6",
                                    "ellipsis": "TypographyComp-ellipsis-0-3-14",
                                    "giant": "TypographyComp-giant-0-3-9",
                                    "heading": "TypographyComp-heading-0-3-8",
                                    "italic": "TypographyComp-italic-0-3-3",
                                    "lowercase": "TypographyComp-lowercase-0-3-11",
                                    "noWrap": "TypographyComp-noWrap-0-3-13",
                                    "semiBold": "TypographyComp-semiBold-0-3-2",
                                    "standard": "TypographyComp-standard-0-3-5",
                                    "subtext": "TypographyComp-subtext-0-3-4",
                                    "uppercase": "TypographyComp-uppercase-0-3-10",
                                  }
                                }
                                variant="big"
                              >
                                <span
                                  className="TypographyComp-big-0-3-7 TypographyComp-bold-0-3-1"
                                >
                                  +100
                                </span>
                              </TypographyComp>
                            </WithStyles(TypographyComp)>
                          </Typography>
                        </div>
                      </TouchRippleComp>
                    </WithStyles(TouchRippleComp)>
                  </TouchRipple>
                </div>
              </ButtonCircularComp>
            </WithStyles(ButtonCircularComp)>
          </ButtonCircular>
        </div>
      </div>
    </InputWithIncrementsComp>
  </WithStyles(InputWithIncrementsComp)>
</InputWithIncrement>
`;

exports[`Storyshots Components/InputWithIncrements Default value 1`] = `
<InputWithIncrement
  defaultValue={20}
  incrementMax={10}
  incrementMed={5}
  incrementMin={1}
  onChange={[Function]}
>
  <WithStyles(InputWithIncrementsComp)
    defaultValue={20}
    incrementMax={10}
    incrementMed={5}
    incrementMin={1}
    innerRef={null}
    jssContext={
      Object {
        "classNamePrefix": "",
        "disableStylesGeneration": false,
      }
    }
    onChange={[Function]}
    theme={Object {}}
  >
    <InputWithIncrementsComp
      classes={
        Object {
          "button": "InputWithIncrementsComp-button-0-3-161",
          "buttons": "InputWithIncrementsComp-buttons-0-3-160",
          "input": "InputWithIncrementsComp-input-0-3-162",
          "inputs": "InputWithIncrementsComp-inputs-0-3-159",
          "root": "InputWithIncrementsComp-root-0-3-158",
        }
      }
      defaultValue={20}
      incrementMax={10}
      incrementMed={5}
      incrementMin={1}
      onChange={[Function]}
    >
      <div
        className="InputWithIncrementsComp-root-0-3-158"
      >
        <div
          className="InputWithIncrementsComp-inputs-0-3-159"
        >
          <div>
            <Input
              blurOnEnter={true}
              className="InputWithIncrementsComp-input-0-3-162"
              error={false}
              fullWidth={true}
              onBlur={[Function]}
              onChange={[Function]}
              type="number"
              value="20"
            >
              <WithStyles(InputComp)
                blurOnEnter={true}
                className="InputWithIncrementsComp-input-0-3-162"
                error={false}
                fullWidth={true}
                innerRef={null}
                jssContext={
                  Object {
                    "classNamePrefix": "",
                    "disableStylesGeneration": false,
                  }
                }
                onBlur={[Function]}
                onChange={[Function]}
                theme={Object {}}
                type="number"
                value="20"
              >
                <InputComp
                  blurOnEnter={true}
                  className="InputWithIncrementsComp-input-0-3-162"
                  classes={
                    Object {
                      "error": "InputComp-error-0-3-107",
                      "fullWidth": "InputComp-fullWidth-0-3-108",
                      "root": "InputComp-root-0-3-106",
                    }
                  }
                  error={false}
                  fullWidth={true}
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="number"
                  value="20"
                >
                  <input
                    className="InputWithIncrementsComp-input-0-3-162 InputComp-fullWidth-0-3-108 InputComp-root-0-3-106"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    type="number"
                    value="20"
                  />
                </InputComp>
              </WithStyles(InputComp)>
            </Input>
          </div>
          <div>
            <Input
              className="InputWithIncrementsComp-input-0-3-162"
              fullWidth={true}
              readOnly={true}
              type="text"
              value=""
            >
              <WithStyles(InputComp)
                className="InputWithIncrementsComp-input-0-3-162"
                fullWidth={true}
                innerRef={null}
                jssContext={
                  Object {
                    "classNamePrefix": "",
                    "disableStylesGeneration": false,
                  }
                }
                readOnly={true}
                theme={Object {}}
                type="text"
                value=""
              >
                <InputComp
                  className="InputWithIncrementsComp-input-0-3-162"
                  classes={
                    Object {
                      "error": "InputComp-error-0-3-107",
                      "fullWidth": "InputComp-fullWidth-0-3-108",
                      "root": "InputComp-root-0-3-106",
                    }
                  }
                  fullWidth={true}
                  readOnly={true}
                  type="text"
                  value=""
                >
                  <input
                    className="InputWithIncrementsComp-input-0-3-162 InputComp-fullWidth-0-3-108 InputComp-root-0-3-106"
                    readOnly={true}
                    type="text"
                    value=""
                  />
                </InputComp>
              </WithStyles(InputComp)>
            </Input>
          </div>
        </div>
        <div
          className="InputWithIncrementsComp-buttons-0-3-160"
        >
          <ButtonCircular
            className="InputWithIncrementsComp-button-0-3-161"
            color="neutral"
            onSelect={[Function]}
            value="+1"
          >
            <WithStyles(ButtonCircularComp)
              className="InputWithIncrementsComp-button-0-3-161"
              color="neutral"
              innerRef={null}
              jssContext={
                Object {
                  "classNamePrefix": "",
                  "disableStylesGeneration": false,
                }
              }
              onSelect={[Function]}
              theme={Object {}}
              value="+1"
            >
              <ButtonCircularComp
                className="InputWithIncrementsComp-button-0-3-161"
                classes={
                  Object {
                    "button": "ButtonCircularComp-button-0-3-53",
                    "neutral": "ButtonCircularComp-neutral-0-3-51",
                    "primary": "ButtonCircularComp-primary-0-3-52",
                  }
                }
                color="neutral"
                onSelect={[Function]}
                value="+1"
              >
                <div
                  className="InputWithIncrementsComp-button-0-3-161 ButtonCircularComp-neutral-0-3-51"
                  onClick={[Function]}
                >
                  <TouchRipple
                    className="ButtonCircularComp-button-0-3-53"
                  >
                    <WithStyles(TouchRippleComp)
                      className="ButtonCircularComp-button-0-3-53"
                      innerRef={null}
                      jssContext={
                        Object {
                          "classNamePrefix": "",
                          "disableStylesGeneration": false,
                        }
                      }
                      theme={Object {}}
                    >
                      <TouchRippleComp
                        className="ButtonCircularComp-button-0-3-53"
                        classes={
                          Object {
                            "disabled": "TouchRippleComp-disabled-0-3-34",
                            "root": "TouchRippleComp-root-0-3-33",
                          }
                        }
                      >
                        <div
                          className="ButtonCircularComp-button-0-3-53 TouchRippleComp-root-0-3-33"
                        >
                          <Typography
                            bold={true}
                            variant="big"
                          >
                            <WithStyles(TypographyComp)
                              bold={true}
                              innerRef={null}
                              jssContext={
                                Object {
                                  "classNamePrefix": "",
                                  "disableStylesGeneration": false,
                                }
                              }
                              theme={Object {}}
                              variant="big"
                            >
                              <TypographyComp
                                bold={true}
                                classes={
                                  Object {
                                    "big": "TypographyComp-big-0-3-7",
                                    "bold": "TypographyComp-bold-0-3-1",
                                    "capitalize": "TypographyComp-capitalize-0-3-12",
                                    "distance": "TypographyComp-distance-0-3-6",
                                    "ellipsis": "TypographyComp-ellipsis-0-3-14",
                                    "giant": "TypographyComp-giant-0-3-9",
                                    "heading": "TypographyComp-heading-0-3-8",
                                    "italic": "TypographyComp-italic-0-3-3",
                                    "lowercase": "TypographyComp-lowercase-0-3-11",
                                    "noWrap": "TypographyComp-noWrap-0-3-13",
                                    "semiBold": "TypographyComp-semiBold-0-3-2",
                                    "standard": "TypographyComp-standard-0-3-5",
                                    "subtext": "TypographyComp-subtext-0-3-4",
                                    "uppercase": "TypographyComp-uppercase-0-3-10",
                                  }
                                }
                                variant="big"
                              >
                                <span
                                  className="TypographyComp-big-0-3-7 TypographyComp-bold-0-3-1"
                                >
                                  +1
                                </span>
                              </TypographyComp>
                            </WithStyles(TypographyComp)>
                          </Typography>
                        </div>
                      </TouchRippleComp>
                    </WithStyles(TouchRippleComp)>
                  </TouchRipple>
                </div>
              </ButtonCircularComp>
            </WithStyles(ButtonCircularComp)>
          </ButtonCircular>
          <ButtonCircular
            className="InputWithIncrementsComp-button-0-3-161"
            color="neutral"
            onSelect={[Function]}
            value="+5"
          >
            <WithStyles(ButtonCircularComp)
              className="InputWithIncrementsComp-button-0-3-161"
              color="neutral"
              innerRef={null}
              jssContext={
                Object {
                  "classNamePrefix": "",
                  "disableStylesGeneration": false,
                }
              }
              onSelect={[Function]}
              theme={Object {}}
              value="+5"
            >
              <ButtonCircularComp
                className="InputWithIncrementsComp-button-0-3-161"
                classes={
                  Object {
                    "button": "ButtonCircularComp-button-0-3-53",
                    "neutral": "ButtonCircularComp-neutral-0-3-51",
                    "primary": "ButtonCircularComp-primary-0-3-52",
                  }
                }
                color="neutral"
                onSelect={[Function]}
                value="+5"
              >
                <div
                  className="InputWithIncrementsComp-button-0-3-161 ButtonCircularComp-neutral-0-3-51"
                  onClick={[Function]}
                >
                  <TouchRipple
                    className="ButtonCircularComp-button-0-3-53"
                  >
                    <WithStyles(TouchRippleComp)
                      className="ButtonCircularComp-button-0-3-53"
                      innerRef={null}
                      jssContext={
                        Object {
                          "classNamePrefix": "",
                          "disableStylesGeneration": false,
                        }
                      }
                      theme={Object {}}
                    >
                      <TouchRippleComp
                        className="ButtonCircularComp-button-0-3-53"
                        classes={
                          Object {
                            "disabled": "TouchRippleComp-disabled-0-3-34",
                            "root": "TouchRippleComp-root-0-3-33",
                          }
                        }
                      >
                        <div
                          className="ButtonCircularComp-button-0-3-53 TouchRippleComp-root-0-3-33"
                        >
                          <Typography
                            bold={true}
                            variant="big"
                          >
                            <WithStyles(TypographyComp)
                              bold={true}
                              innerRef={null}
                              jssContext={
                                Object {
                                  "classNamePrefix": "",
                                  "disableStylesGeneration": false,
                                }
                              }
                              theme={Object {}}
                              variant="big"
                            >
                              <TypographyComp
                                bold={true}
                                classes={
                                  Object {
                                    "big": "TypographyComp-big-0-3-7",
                                    "bold": "TypographyComp-bold-0-3-1",
                                    "capitalize": "TypographyComp-capitalize-0-3-12",
                                    "distance": "TypographyComp-distance-0-3-6",
                                    "ellipsis": "TypographyComp-ellipsis-0-3-14",
                                    "giant": "TypographyComp-giant-0-3-9",
                                    "heading": "TypographyComp-heading-0-3-8",
                                    "italic": "TypographyComp-italic-0-3-3",
                                    "lowercase": "TypographyComp-lowercase-0-3-11",
                                    "noWrap": "TypographyComp-noWrap-0-3-13",
                                    "semiBold": "TypographyComp-semiBold-0-3-2",
                                    "standard": "TypographyComp-standard-0-3-5",
                                    "subtext": "TypographyComp-subtext-0-3-4",
                                    "uppercase": "TypographyComp-uppercase-0-3-10",
                                  }
                                }
                                variant="big"
                              >
                                <span
                                  className="TypographyComp-big-0-3-7 TypographyComp-bold-0-3-1"
                                >
                                  +5
                                </span>
                              </TypographyComp>
                            </WithStyles(TypographyComp)>
                          </Typography>
                        </div>
                      </TouchRippleComp>
                    </WithStyles(TouchRippleComp)>
                  </TouchRipple>
                </div>
              </ButtonCircularComp>
            </WithStyles(ButtonCircularComp)>
          </ButtonCircular>
          <ButtonCircular
            className="InputWithIncrementsComp-button-0-3-161"
            color="neutral"
            onSelect={[Function]}
            value="+10"
          >
            <WithStyles(ButtonCircularComp)
              className="InputWithIncrementsComp-button-0-3-161"
              color="neutral"
              innerRef={null}
              jssContext={
                Object {
                  "classNamePrefix": "",
                  "disableStylesGeneration": false,
                }
              }
              onSelect={[Function]}
              theme={Object {}}
              value="+10"
            >
              <ButtonCircularComp
                className="InputWithIncrementsComp-button-0-3-161"
                classes={
                  Object {
                    "button": "ButtonCircularComp-button-0-3-53",
                    "neutral": "ButtonCircularComp-neutral-0-3-51",
                    "primary": "ButtonCircularComp-primary-0-3-52",
                  }
                }
                color="neutral"
                onSelect={[Function]}
                value="+10"
              >
                <div
                  className="InputWithIncrementsComp-button-0-3-161 ButtonCircularComp-neutral-0-3-51"
                  onClick={[Function]}
                >
                  <TouchRipple
                    className="ButtonCircularComp-button-0-3-53"
                  >
                    <WithStyles(TouchRippleComp)
                      className="ButtonCircularComp-button-0-3-53"
                      innerRef={null}
                      jssContext={
                        Object {
                          "classNamePrefix": "",
                          "disableStylesGeneration": false,
                        }
                      }
                      theme={Object {}}
                    >
                      <TouchRippleComp
                        className="ButtonCircularComp-button-0-3-53"
                        classes={
                          Object {
                            "disabled": "TouchRippleComp-disabled-0-3-34",
                            "root": "TouchRippleComp-root-0-3-33",
                          }
                        }
                      >
                        <div
                          className="ButtonCircularComp-button-0-3-53 TouchRippleComp-root-0-3-33"
                        >
                          <Typography
                            bold={true}
                            variant="big"
                          >
                            <WithStyles(TypographyComp)
                              bold={true}
                              innerRef={null}
                              jssContext={
                                Object {
                                  "classNamePrefix": "",
                                  "disableStylesGeneration": false,
                                }
                              }
                              theme={Object {}}
                              variant="big"
                            >
                              <TypographyComp
                                bold={true}
                                classes={
                                  Object {
                                    "big": "TypographyComp-big-0-3-7",
                                    "bold": "TypographyComp-bold-0-3-1",
                                    "capitalize": "TypographyComp-capitalize-0-3-12",
                                    "distance": "TypographyComp-distance-0-3-6",
                                    "ellipsis": "TypographyComp-ellipsis-0-3-14",
                                    "giant": "TypographyComp-giant-0-3-9",
                                    "heading": "TypographyComp-heading-0-3-8",
                                    "italic": "TypographyComp-italic-0-3-3",
                                    "lowercase": "TypographyComp-lowercase-0-3-11",
                                    "noWrap": "TypographyComp-noWrap-0-3-13",
                                    "semiBold": "TypographyComp-semiBold-0-3-2",
                                    "standard": "TypographyComp-standard-0-3-5",
                                    "subtext": "TypographyComp-subtext-0-3-4",
                                    "uppercase": "TypographyComp-uppercase-0-3-10",
                                  }
                                }
                                variant="big"
                              >
                                <span
                                  className="TypographyComp-big-0-3-7 TypographyComp-bold-0-3-1"
                                >
                                  +10
                                </span>
                              </TypographyComp>
                            </WithStyles(TypographyComp)>
                          </Typography>
                        </div>
                      </TouchRippleComp>
                    </WithStyles(TouchRippleComp)>
                  </TouchRipple>
                </div>
              </ButtonCircularComp>
            </WithStyles(ButtonCircularComp)>
          </ButtonCircular>
        </div>
      </div>
    </InputWithIncrementsComp>
  </WithStyles(InputWithIncrementsComp)>
</InputWithIncrement>
`;
